--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,11 +13,18 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".RegistrationActivity2"
+            android:screenOrientation="portrait"
+            android:label="@string/title_activity_registration"
+            android:theme="@style/AppTheme.NoActionBar"/>
+
         <activity
             android:name=".RegistrationActivity"
             android:screenOrientation="portrait"
             android:label="@string/title_activity_registration"
             android:theme="@style/AppTheme.NoActionBar" />
+        <activity android:name=".WelcomeLogin" />
+        <activity android:name=".RegStep2Activity"/>
         <activity
             android:name=".HomeActivity"
             android:screenOrientation="portrait"
