--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,11 @@
 apply plugin: 'com.android.application'
 
+repositories {
+    maven {
+        url "https://jitpack.io"
+    }
+}
+
 android {
     compileSdkVersion 27
     defaultConfig {
@@ -33,7 +39,10 @@ dependencies {
     implementation 'com.android.volley:volley:1.0.0'
     implementation 'se.emilsjolander:stickylistheaders:2.7.0'
     implementation 'com.paytm:pgplussdk:1.0.1'
-    implementation 'com.specyci:residemenu:1.6+'
+    implementation 'com.github.ozodrukh:CircularReveal:1.0.4'
+    implementation 'com.github.yalantis:Side-Menu.Android:1.0.1'
+
+
 
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
