--- a/build.gradle
+++ b/build.gradle
@@ -6,12 +6,11 @@ buildscript {
         google()
         jcenter()
         mavenCentral()
+
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.1.3'
-
-        
-
+        classpath 'com.github.dcendents:android-maven-gradle-plugin:1.5'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
