--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -54,6 +54,9 @@
         </activity>
         <activity android:name=".LiveActivity"
             android:theme="@style/MyMaterialTheme">
+
+        </activity>
+        <activity android:name=".ScheduleActivity" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
