--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,7 +41,8 @@ dependencies {
     implementation 'com.paytm:pgplussdk:1.0.1'
     implementation 'com.github.ozodrukh:CircularReveal:1.0.4'
     implementation 'com.github.yalantis:Side-Menu.Android:1.0.1'
-
+    implementation 'devlight.io:navigationtabbar:1.2.5'
+    implementation 'com.github.florent37:hollyviewpager:1.0.1'
 
 
     implementation fileTree(dir: 'libs', include: ['*.jar'])
