--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,9 +1,10 @@
+<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="bitspilani.bosm">
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-    <uses-permission android:name="android.permission.BLUETOOTH"/>
+    <uses-permission android:name="android.permission.BLUETOOTH" />
 
     <application
         android:allowBackup="true"
@@ -13,54 +14,56 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".RegistrationActivity"
-            android:screenOrientation="portrait"
+        <activity
+            android:name=".RegistrationActivity"
             android:label="@string/title_activity_registration"
-            android:theme="@style/AppTheme.NoActionBar"/>
-
-        <activity android:name=".RegStep2Activity"
-            android:theme="@style/AppTheme.NoActionBar"
-            android:screenOrientation="portrait"></activity>
-        
-        <activity android:name=".SportParticipantsActivity"
-            android:screenOrientation="portrait"/>
-        
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".RegStep2Activity"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".SportParticipantsActivity"
+            android:screenOrientation="portrait" />
         <activity
             android:name=".RegistrationOld"
-            android:screenOrientation="portrait"
             android:label="@string/title_activity_registration"
+            android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".WelcomeLogin" />
-        <activity android:name=".RegStep2Old"/>
+        <activity android:name=".RegStep2Old" />
         <activity
             android:name=".HomeActivity"
-            android:screenOrientation="portrait"
             android:label="@string/title_activity_home"
-            android:theme="@style/AppTheme">
-
-        </activity>
-        <activity android:name=".WalletActivity"
-            android:screenOrientation="portrait">
-
-        </activity>
-        <activity android:name=".AddMoneyBActivity"
-            android:screenOrientation="portrait"/>
-        <activity android:name=".CartActivity"
-            android:screenOrientation="portrait"/>
-        <activity android:name=".OrderDetailsActivity"></activity>
-        <activity android:name=".LoginActivity"
-            android:screenOrientation="portrait">
-
-        </activity>
-        <activity android:name=".LiveActivity"
-            android:theme="@style/MyMaterialTheme">
-
-        </activity>
-        <activity android:name=".ScheduleActivity" >
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme" />
+        <activity
+            android:name=".WalletActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".AddMoneyBActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".CartActivity"
+            android:screenOrientation="portrait" />
+        <activity android:name=".OrderDetailsActivity" />
+        <activity
+            android:name=".LoginActivity"
+            android:screenOrientation="portrait" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".LiveActivity"
+            android:theme="@style/MyMaterialTheme" />
+        <activity android:name=".ScheduleActivity" />
+        <activity android:name=".CurrentSportActivity">
+
+        </activity>
     </application>
+
 </manifest>
