--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,7 +38,6 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 
-    implementation 'com.google.android.gms:play-services-auth:11.8.0'
     implementation 'com.android.volley:volley:1.0.0'
     implementation 'se.emilsjolander:stickylistheaders:2.7.0'
     implementation 'com.paytm:pgplussdk:1.0.1'
@@ -54,6 +53,8 @@ dependencies {
     implementation 'com.github.DanielMartinus:Stepper-Touch:0.6'
     implementation 'com.facebook.shimmer:shimmer:0.3.0'
     implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation 'com.google.firebase:firebase-auth:16.0.3'
+    implementation 'com.google.android.gms:play-services-auth:15.0.1'
 
 }
 
