--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,10 +17,6 @@
         android:theme="@style/AppTheme"
         tools:replace="android:allowBackup">
         <activity
-            android:name=".AddMoneyBActivity"
-            android:screenOrientation="portrait" />
-        <activity android:name=".OrderDetailsActivity" />
-        <activity
             android:name=".LoginActivity"
             android:screenOrientation="portrait">
             <intent-filter>
@@ -34,6 +30,20 @@
         </activity>
 
         <service android:name=".hover.MultipleSectionsHoverMenuService" />
+
+
+        <service
+            android:name=".notification.MyFirebaseMessagingService">
+            <intent-filter>
+                <action android:name="com.google.firebase.MESSAGING_EVENT"/>
+            </intent-filter>
+        </service>
+
+        <!-- Set color used with incoming notification messages. This is used when no color is set for the incoming
+             notification message. See README(https://goo.gl/6BKBk7) for more. -->
+        <!--<meta-data-->
+            <!--android:name="com.google.firebase.messaging.default_notification_color"-->
+            <!--android:resource="@color/colorAccent" />-->
 
     </application>
 
