--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,6 +55,9 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.google.firebase:firebase-auth:16.0.3'
     implementation 'com.google.android.gms:play-services-auth:15.0.1'
+    implementation 'com.sackcentury:shinebutton:0.2.0'
+    implementation 'com.google.firebase:firebase-messaging:17.3.0'
+
 
 }
 
