--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,6 +57,9 @@ dependencies {
     implementation 'com.google.android.gms:play-services-auth:15.0.1'
     implementation 'com.sackcentury:shinebutton:0.2.0'
     implementation 'com.google.firebase:firebase-messaging:17.3.0'
+    implementation 'com.eftimoff:android-viewpager-transformers:1.0.1@aar'
+    implementation 'com.jsibbold:zoomage:1.1.0'
+    implementation 'com.squareup.picasso:picasso:2.5.2'
 
 
 }
