--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,6 +10,9 @@ repositories {
 }
 
 android {
+    lintOptions {
+        checkReleaseBuilds false
+    }
     compileSdkVersion 27
     defaultConfig {
         applicationId "bitspilani.bosm"
