--- a/app/build.gradle
+++ b/app/build.gradle
@@ -71,7 +71,7 @@ dependencies {
     implementation 'com.github.florent37:viewtooltip:1.1.5'
 
     implementation 'com.google.firebase:firebase-storage:16.0.1'
-
+    implementation 'com.firebaseui:firebase-ui-storage:4.1.0'
 
 }
 
