--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,8 +17,7 @@
         tools:replace="android:allowBackup">
 
         <activity
-            android:name=".HomeActivity"
-            android:screenOrientation="portrait">
+            android:name=".HomeActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
