--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,7 @@
         tools:replace="android:allowBackup">
 
         <activity
+            android:label="@string/app_name"
             android:name=".HomeActivity"
             android:screenOrientation="portrait">
             <intent-filter>
