--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,11 +16,12 @@ android {
     compileSdkVersion 27
     defaultConfig {
         applicationId "bitspilani.bosm"
-        minSdkVersion 21
+        minSdkVersion 19
         targetSdkVersion 26
         versionCode 2
         versionName "1.0.1"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        multiDexEnabled true
     }
     buildTypes {
         release {
